fixed footer/button overlap in CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 .wrapper {
-  margin-bottom:3%;
+
 }
 
 h1,
@@ -59,6 +59,7 @@ h1 {
 
 #resetButton {
   padding: 5px 10px;
+  margin-bottom: 10%;
 }
 
 #resetButton:hover {
